--- a/elkm1/services.yaml
+++ b/elkm1/services.yaml
@@ -29,3 +29,45 @@ alarm_night_instant:
     code:
       description: An code to arm the alarm control panel.
       example: 1234
+
+alarm_display_message:
+  description: Display a message on all of the ElkM1 keypads for an area.
+  fields:
+    entity_id:
+      description: Name of alarm control panel to display messages on.
+      example: 'alarm_control_panel.main'
+    clear:
+      description: 0=clear message, 1=clear message with * key, 2=Display until timeout; default 2
+      example: 1
+    beep:
+      description: 0=no beep, 1=beep; default 0
+      example: 1
+    timeout:
+      description: Time to display message, 0=forever, max 65535, default 0
+      example: 4242
+    line1:
+      description: Up to 16 characters of text (truncated if too long). Default blank.
+      example: The answer to life,
+    line2:
+      description: Up to 16 characters of text (truncated if too long). Default blank.
+      example: the universe, and everything.
+
+sensor_speak_word:
+  description: Speak a word. See list in ElkM1 ASCII Protocol documentation.
+  fields:
+    entity_id:
+      description: Name of panel to speak.
+      example: 'sensor.elkm1_panel_001'
+    number:
+      description: Word number to speak.
+      example: 458
+
+sensor_speak_phrase:
+  description: Speak a phrase. See list in ElkM1 ASCII Protocol documentation.
+  fields:
+    entity_id:
+      description: Name of panel to speak.
+      example: 'sensor.elkm1_panel_001'
+    number:
+      description: Phrase number to speak.
+      example: 42
